--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </div>
 
 <footer>
-    <p>&copy; 2025 Hello People BD. All rights reserved. | <a href="https://hellopeoplebd-x27gal.store.link/page/privacy">Privacy Policy</a></p>
+    <p>&copy; 2025 Hello People BD. All rights reserved. | <a href="https://hellopeoplebd.github.io/privacy-policy/">Privacy Policy</a></p>
 </footer>
 
 </body>
