--- a/index.html
+++ b/index.html
@@ -9,14 +9,22 @@
 </head>
 <body>
 
-<header>
-    <h1>Terms of Service</h1>
+<header class="header">
+    <div class="logo-container">
+        <a href="https://hellopeoplebd-x27gal.store.link/" target="_blank">
+            <img src="https://i.ibb.co.com/G93szC7/BIG-LOGOArtboard-2-copy-4-4x.png" alt="Hello People BD Logo" class="logo">
+        </a>
+    </div>
+    <div class="header-text">
+        <h1>Terms of Service</h1>
+<p>Guidelines for using our services</p>
+    </div>
 </header>
 
 <div class="container">
     <section>
         <h2>Introduction</h2>
-        <p>Welcome to Hello People BD. By accessing or using our services, you agree to be bound by the following Terms of Service. If you do not agree with any part of these terms, you must refrain from using our services.</p>
+        <p>Welcome to <strong>Hello People BD</strong>. By accessing or using our services, you agree to be bound by the following Terms of Service. If you do not agree with any part of these terms, you must refrain from using our services.</p>
     </section>
 
     <section>
@@ -41,7 +49,7 @@
 
     <section>
         <h2>Privacy and Data Security</h2>
-        <p>We are committed to safeguarding your privacy. Your personal information is securely stored and only used for order processing and communication. For detailed information on how we manage your data, please refer to our <a href="https://hellopeoplebd-x27gal.store.link/page/privacy">Privacy Policy</a>.</p>
+        <p>We are committed to safeguarding your privacy. Your personal information is securely stored and only used for order processing and communication. For detailed information on how we manage your data, please refer to our <a href="https://hellopeoplebd.github.io/privacy-policy">Privacy Policy</a>.</p>
     </section>
 
     <section>
@@ -71,7 +79,7 @@
 </div>
 
 <footer>
-    <p>&copy; 2025 Hello People BD. All rights reserved. | <a href="https://hellopeoplebd.github.io/privacy-policy/">Privacy Policy</a></p>
+    <p>&copy; 2025 <strong>Hello People BD</strong>. All rights reserved. | <a href="https://hellopeoplebd.github.io/privacy-policy/">Privacy Policy</a> | <a href="https://hellopeoplebd.github.io/contact-us">Contact Us</a></p>
 </footer>
 
 </body>
